--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ decorator==5.0.9
 defusedxml==0.7.1
 Django==3.2.5
 django-allauth==0.45.0
+django-environ==0.4.5
 django-filter==2.4.0
 djangorestframework==3.12.4
 gunicorn==20.1.0
