--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ amqp==5.0.6
 asgiref==3.4.1
 backcall==0.2.0
 billiard==3.6.4.0
+boto3==1.18.11
+botocore==1.21.11
 celery==5.1.2
 certifi==2021.5.30
 cffi==1.14.6
@@ -15,14 +17,19 @@ decorator==5.0.9
 defusedxml==0.7.1
 Django==3.2.5
 django-allauth==0.45.0
+django-celery-beat==2.2.1
+django-celery-results==2.2.0
+django-cors-headers==3.7.0
 django-environ==0.4.5
 django-filter==2.4.0
+django-timezone-field==4.2.1
 djangorestframework==3.12.4
 gunicorn==20.1.0
 idna==3.2
 ipython==7.26.0
 ipython-genutils==0.2.0
 jedi==0.18.0
+jmespath==0.10.0
 kombu==5.1.0
 matplotlib-inline==0.1.2
 mysqlclient==2.0.3
@@ -35,11 +42,14 @@ ptyprocess==0.7.0
 pycparser==2.20
 Pygments==2.9.0
 PyJWT==2.1.0
+python-crontab==2.5.1
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2021.1
 redis==3.5.3
 requests==2.26.0
 requests-oauthlib==1.3.0
+s3transfer==0.5.0
 six==1.16.0
 sqlparse==0.4.1
 traitlets==5.0.5
