--- a/aws/ec2/concat-clips/Cargo.toml
+++ b/aws/ec2/concat-clips/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dirs = "3.0.2"
 tokio = { version = "1.9.0", features = ["full"] }
 rusoto_core = "0.47"
 rusoto_credential = "0.47.0"
