--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 amqp==5.0.6
 asgiref==3.4.1
 backcall==0.2.0
+beautifulsoup4==4.11.1
 billiard==3.6.4.0
 boto3==1.18.11
 botocore==1.21.11
+cachetools==5.1.0
 celery==5.1.2
 certifi==2021.5.30
 cffi==1.14.6
@@ -24,7 +26,14 @@ django-environ==0.4.5
 django-filter==2.4.0
 django-timezone-field==4.2.1
 djangorestframework==3.12.4
+google==3.0.0
+google-api-core==2.7.3
+google-api-python-client==2.47.0
+google-auth==2.6.6
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.56.1
 gunicorn==20.1.0
+httplib2==0.20.4
 idna==3.2
 ipython==7.26.0
 ipython-genutils==0.2.0
@@ -38,10 +47,14 @@ parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.19
+protobuf==3.20.1
 ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.20
 Pygments==2.9.0
 PyJWT==2.1.0
+pyparsing==3.0.9
 python-crontab==2.5.1
 python-dateutil==2.8.2
 python3-openid==3.2.0
@@ -49,10 +62,13 @@ pytz==2021.1
 redis==3.5.3
 requests==2.26.0
 requests-oauthlib==1.3.0
+rsa==4.8
 s3transfer==0.5.0
 six==1.16.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.1
 traitlets==5.0.5
+uritemplate==4.1.1
 urllib3==1.26.6
 vine==5.0.0
 wcwidth==0.2.5
